fix: increase footer title font size for improved visibility

--- a/style.css
+++ b/style.css
@@ -1261,7 +1261,7 @@ footer {
     justify-content: center;
   }
   .servicesTitle h1 {
-    font-size: 4.5rem;
+    font-size: 5rem;
     display: block;
     width: 100%;
     font-weight: 900;
